@@ -77,6 +77,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|conf
@@ -256,6 +284,23 @@ name|int
 name|bucketSize
 decl_stmt|;
 comment|// bucket size for RowContainer
+specifier|protected
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 specifier|public
 name|MapJoinObjectValue
 parameter_list|()
@@ -498,6 +543,28 @@ name|getTblDesc
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|sz
+operator|>
+literal|0
+condition|)
+block|{
+name|int
+name|numCols
+init|=
+name|in
+operator|.
+name|readInt
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|numCols
+operator|>
+literal|0
+condition|)
+block|{
 for|for
 control|(
 name|int
@@ -581,6 +648,8 @@ name|memObj
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
 name|obj
 operator|=
 name|res
@@ -663,8 +732,16 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
-for|for
-control|(
+if|if
+condition|(
+name|v
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
 name|ArrayList
 argument_list|<
 name|Object
@@ -675,6 +752,29 @@ name|v
 operator|.
 name|first
 argument_list|()
+decl_stmt|;
+name|out
+operator|.
+name|writeInt
+argument_list|(
+name|row
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|row
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+for|for
+control|(
 init|;
 name|row
 operator|!=
@@ -713,6 +813,8 @@ argument_list|(
 name|out
 argument_list|)
 expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 catch|catch
